--- a/people-search.html
+++ b/people-search.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Example</title>
+    <title>People Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>People Search</h1>
+        <ul class="navigation">
+            <link>People search</li>
+            <link href="vehicle-search.html">Vehicle search</li>
+            <link href="add-a-vehicle.html">Add a vehicle</li>
+        </ul>
     </header>
     <div class="container">
         <aside class="sidebar">
@@ -18,11 +23,11 @@
         <main class="main-content">
             <p>Search by driver name:</p>
             <p>Search by driving license number:</p>
+            <button type="submit">Submit</button>
         </main>
     </div>
     <footer>
         <h2>Footer</h2>
-        <p>This is the footer content.</p>
     </footer>
 </body>
 </html>
