--- a/people-search.html
+++ b/people-search.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>People Search</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="backend.js" defer></script>
+    <script src="backend.js" type="module"></script>
 </head>
 <body>
     <header>
