Markdown update with ListProperties tests and ListLandlords tests

--- a/people-search.html
+++ b/people-search.html
@@ -33,7 +33,9 @@
                 <input id="submit" type="submit"/>
             </div>
         </form>
-        <p></p>
+        <div id="results">
+            <p></p>
+        </div>
     </main>
     <footer>
         <h2>Footer</h2>
