--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Example</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="backend.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -13,11 +14,22 @@
     <div class="container">
         <aside class="sidebar">
             <h2>Sidebar</h2>
-            <p>This is the sidebar content.</p>
         </aside>
         <main class="main-content">
-            <p>Search by driver name:</p>
-            <p>Search by driving license number:</p>
+            <form>
+                <div>
+                    <label for="name">Search by driver name</label>
+                    <input id="name" type="text"/>
+                </div>
+                <div>
+                    <label for="license">Search by license number</label>
+                    <input id="license" type="text"/>
+                </div>
+                <div>
+                    <input id="submit" type="submit"/>
+                </div>
+            </form>
+            <div id="results"></div>
         </main>
     </div>
     <footer>
