JS added error messages, added html image + working links

--- a/people-search.html
+++ b/people-search.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>People Search</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="backend.js" type="module"></script>
+    <script src="people-backend.js" type="module"></script>
 </head>
 <body>
     <header>
         <h1>People Search</h1>
         <ul class="navigation">
-            <link>People search</li>
-            <link href="vehicle-search.html">Vehicle search</li>
-            <link href="add-a-vehicle.html">Add a vehicle</li>
+            <label>People search</label>
+            <a href="vehicle-search.html">Vehicle search</a>
+            <a href="add-a-vehicle.html">Add a vehicle</a>
         </ul>
     </header>
     <aside class="sidebar">
-        <h2>Sidebar</h2>
+        <img src="illusion.gif" alt="Moving Optical Illustion">
     </aside>
     <main class="main-content">
         <form>
@@ -33,8 +33,8 @@
                 <input id="submit" type="submit"/>
             </div>
         </form>
+        <p></p>
         <div id="results">
-            <p></p>
         </div>
     </main>
     <footer>
