--- a/people-search.html
+++ b/people-search.html
@@ -17,7 +17,7 @@
         </ul>
     </header>
     <aside class="sidebar">
-        <img src="illusion.gif" alt="Moving Optical Illustion">
+        <img src="https://24.media.tumblr.com/tumblr_m2dtcsSXYD1r3in4so1_500.gif" alt="Moving Optical Illustion">
     </aside>
     <main class="main-content">
         <form>
