--- a/people-search.html
+++ b/people-search.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <script src="people-backend.js" type="module"></script>
 </head>
-<body>
+<body id="container">
     <header>
         <h1>People Search</h1>
         <ul class="navigation">
-            <label>People search</label>
-            <a href="vehicle-search.html">Vehicle search</a>
-            <a href="add-a-vehicle.html">Add a vehicle</a>
+            <li href="people-search.html">People search</li>
+            <li href="vehicle-search.html">Vehicle search</li>
+            <li href="add-a-vehicle.html">Add a vehicle</li>
         </ul>
     </header>
     <aside class="sidebar">
-        <img src="https://24.media.tumblr.com/tumblr_m2dtcsSXYD1r3in4so1_500.gif" alt="Moving Optical Illustion">
+        <img src="https://i.pinimg.com/originals/a5/2b/23/a52b232810587be914eab7c004e9fb08.gif" alt="Moving Optical Illustion">
     </aside>
     <main class="main-content">
         <form>
