--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Example</title>
+    <title>Add a Vehicle</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Add a vehicle</h1>
+        <h1>Add a Vehicle</h1>
+        <ul class="navigation">
+            <li href="people-search.html">People search</li>
+            <li href="vehicle-search.html">Vehicle search</li>
+            <li href="add-a-vehicle.html">Add a vehicle</li>
+        </ul>
     </header>
     <div class="container">
         <aside class="sidebar">
