--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Example</title>
+    <title>Vehicle Search</title>
     <link rel="stylesheet" href="styles.css">
     <script src="backend.js" type="module"></script>
 </head>
 <body>
     <header>
         <h1>Vehicle Search</h1>
+        <ul class="navigation">
+            <li href="people-search.html">People search</li>
+            <li href="vehicle-search.html">Vehicle search</li>
+            <li href="add-a-vehicle.html">Add a vehicle</li>
+        </ul>
     </header>
     <div class="container">
         <aside class="sidebar">
