--- a/people-search.html
+++ b/people-search.html
@@ -11,9 +11,9 @@
     <header>
         <h1>People Search</h1>
         <ul class="navigation">
-            <li href="people-search.html">People search</li>
-            <li href="vehicle-search.html">Vehicle search</li>
-            <li href="add-a-vehicle.html">Add a vehicle</li>
+            <li><a href="people-search.html">People search</a></li>
+            <li><a href="vehicle-search.html">People search</a></li>           
+            <li><a href="add-a-vehicle.html">People search</a></li>
         </ul>
     </header>
     <aside class="sidebar">
