--- a/people-search.html
+++ b/people-search.html
@@ -17,7 +17,7 @@
         </ul>
     </header>
     <aside class="sidebar">
-        <img src="https://i.pinimg.com/originals/a5/2b/23/a52b232810587be914eab7c004e9fb08.gif" alt="Moving Optical Illustion">
+        <img src="https://cdn.pixabay.com/photo/2018/02/23/22/05/brain-3176780_1280.png" alt="brain">
     </aside>
     <main class="main-content">
         <form>
