--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -12,8 +12,8 @@
         <h1>Vehicle Search</h1>
         <ul class="navigation">
             <li><a href="people-search.html">People search</a></li>
-            <li><a href="vehicle-search.html">People search</a></li>           
-            <li><a href="add-a-vehicle.html">People search</a></li>
+            <li><a href="vehicle-search.html">Vehicle search</a></li>           
+            <li><a href="add-a-vehicle.html">Add a vehicle</a></li>
         </ul>
     </header>
     <div class="container">
