Adjustments to names for tests

--- a/people-search.html
+++ b/people-search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="people-backend.js" type="module"></script>
 </head>
-<body id="container">
+<body class="container">
     <header>
         <h1>People Search</h1>
         <ul class="navigation">
