--- a/people-search.html
+++ b/people-search.html
@@ -17,7 +17,7 @@
         </ul>
     </header>
     <aside class="sidebar">
-        <img src="brain.svg" alt="brain">
+        <img src="https://cdn.pixabay.com/photo/2018/02/23/22/05/brain-3176780_1280.png" alt="brain">
     </aside>
     <main class="main-content">
         <form>
