--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Search</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="backend.js" type="module"></script>
+    <script src="vehicle-backend.js" type="module"></script>
 </head>
-<body>
+<body class="container">
     <header>
         <h1>Vehicle Search</h1>
         <ul class="navigation">
@@ -16,30 +16,26 @@
             <li><a href="add-a-vehicle.html">Add a vehicle</a></li>
         </ul>
     </header>
-    <div class="container">
-        <aside class="sidebar">
-            <h2>Sidebar</h2>
-        </aside>
-        <main class="main-content">
-            <form>
-                <div>
-                    <label for="name">Search by driver name</label>
-                    <input id="name" type="text"/>
-                </div>
-                <div>
-                    <label for="license">Search by license number</label>
-                    <input id="license" type="text"/>
-                </div>
-                <div>
-                    <input id="submit" type="submit"/>
-                </div>
-            </form>
-            <div id="results"></div>
-        </main>
+    <aside class="sidebar">
+        <img src="https://cdn.pixabay.com/photo/2018/02/23/22/05/brain-3176780_1280.png" alt="brain">
+    </aside>
+    <main class="main-content">
+        <form>
+            <div>
+                <label for="rego">Search by registration number</label>
+                <input id="rego" type="text"/>
+            </div>
+            <div>
+                <input id="submit" type="submit"/>
+            </div>
+        </form>
+        <p></p>
+        <div id="results">
+        </div>
+    </main>
     </div>
     <footer>
         <h2>Footer</h2>
-        <p>This is the footer content.</p>
     </footer>
 </body>
 </html>
