Vehicle backend.js

--- a/people-search.html
+++ b/people-search.html
@@ -33,7 +33,7 @@
                 <input id="submit" type="submit"/>
             </div>
         </form>
-        <p></p>
+        <p id="message"></p>
         <div id="results">
         </div>
     </main>
