Vehicle backend.js

--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="vehicle-backend.js" type="module"></script>
 </head>
-<body class="container">
+<body id="container">
     <header>
         <h1>Vehicle Search</h1>
         <ul class="navigation">
