checking for supabase changes

--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -42,7 +42,7 @@
                 <input id="owner" type="text"/>
             </div>
             <div>
-                <input id="add" type="submit" value="Add">
+                <input id="button" type="submit" value="Add">
             </div>
         </form>
         <form id="people-form" style="display: none;">
