add new person form with supabase integration

--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -72,7 +72,7 @@
                 <input id="expire" type="text"/>
             </div>
             <div>
-                <input id="add" type="submit" value="Add owner">
+                <input id="button" type="submit" value="Add owner">
             </div>
         </form>
         <p></p>
