Attempting to pass vehicle search test

--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -26,10 +26,10 @@
                 <input id="rego" type="text"/>
             </div>
             <div>
-                <input id="submit" type="submit"/>
+                <input id="button" type="submit"/>
             </div>
         </form>
-        <p></p>
+        <p id="message"></p>
         <div id="results">
         </div>
     </main>
