add a vehicle db error message

--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -75,7 +75,8 @@
                 <input id="button" type="submit" value="Add owner">
             </div>
         </form>
-        <p></p>
+        <p id="message"></p>
+        <p id="error-message"></p>
     </main>
     <footer>
         <h2>Footer</h2>
