--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -42,7 +42,7 @@
                 <input id="owner" type="text"/>
             </div>
             <div>
-                <input id="button" type="submit" value="Add">
+                <button type="Submit" name="Add vehicle">Add vehicle</button>
             </div>
         </form>
         <form id="people-form" style="display: none;">
@@ -72,7 +72,7 @@
                 <input id="expire" type="text"/>
             </div>
             <div>
-                <input id="button" type="submit" value="Add owner">
+                <button type="Submit" name="Add owner">Add owner</button>
             </div>
         </form>
         <p id="message"></p>
