owner id changed to person id

--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -26,7 +26,7 @@
                 <input id="rego" type="text"/>
             </div>
             <div>
-                <input id="button" type="submit"/>
+                <button type="submit" name="Submit">Submit</button>
             </div>
         </form>
         <p id="message"></p>
