--- a/add-a-vehicle.html
+++ b/add-a-vehicle.html
@@ -78,7 +78,7 @@
         <p id="message"></p>
     </main>
     <footer>
-        <h2>Footer</h2>
+        <h2>Samuel Margerison - COMP1004</h2>
     </footer>
 </body>
 </html>
