--- a/people-search.html
+++ b/people-search.html
@@ -38,7 +38,7 @@
         </div>
     </main>
     <footer>
-        <h2>Footer</h2>
+        <h2>Samuel Margerison - COMP1004</h2>
     </footer>
 </body>
 </html>
